--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <title>SpryXplore</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dexzpdaju/image/upload/v1741015394/Van_qbqdec.png">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
