--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,6 +3,7 @@
   background: #F4F4F4;
   display: flex;
   align-items: center;
+  margin-top: auto;
   justify-content: space-between;
   height: 100px;
   padding: 0px 50px;
