--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-
+    <%= render "shared/flashes" %>
   <!--NAVBAR-->
   <div class="d-flex flex-column min-vh-100">
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
@@ -31,13 +31,23 @@
               <li class="nav-item">
                 <a class="nav-link" href="#vans">Vans</a>
               </li>
-              <li class="nav-item dropdown">
-                <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="" />
-                <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#">My bookings</a>
-                  <a class="dropdown-item" data-turbo-method="delete" href="#">Log out</a>
-                </div>
-              </li>
+              <% if user_signed_in? %>
+                <li class="nav-item dropdown">
+                  <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="" />
+                  <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">My bookings</a>
+
+                    <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
+
+                    <%# <%= button_to  "Log out", destroy_user_session_path, method: :delete %>
+                  </div>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to "S'inscrire", new_user_registration_path, class: "nav-link" %>
+                </li>
+              <% end %>
+
               <!--li class="nav-item"-->
               <!--/li-->
           </ul>
