--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,5 +9,7 @@
 </div>
 
 <div class= "container">
-  <h2>Check our latest offers</h2>
+  <div id= "description">
+    <h2>Check our latest offers</h2>
+  </div>
 </div>
