--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,61 +13,9 @@
 
   <body>
     <%= render "shared/flashes" %>
-  <!--NAVBAR-->
-  <div class="d-flex flex-column min-vh-100">
-    <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741013739/Spry_Xplore_2_xtbrkq.png"/>
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="#home">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#vans">Vans</a>
-              </li>
-              <% if user_signed_in? %>
-                <li class="nav-item dropdown">
-                  <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="" />
-                  <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">My bookings</a>
-
-                    <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
-
-                    <%# <%= button_to  "Log out", destroy_user_session_path, method: :delete %>
-                  </div>
-                </li>
-              <% else %>
-                <li class="nav-item">
-                  <%= link_to "S'inscrire", new_user_registration_path, class: "nav-link" %>
-                </li>
-              <% end %>
-
-              <!--li class="nav-item"-->
-              <!--/li-->
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!--NAVBAR-->
-      <%= yield %>
-      <div class="footer">
-        <div class="footer-links">
-          <a href="https://github.com/MAXCLMNT98/Spry_Xplore"><i class="fab fa-github"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-facebook"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-linkedin"></i></a>
-        </div>
-        <div class="footer-copyright">
-          This footer is made with <i class="fas fa-heart"></i> by the Spry team
-        </div>
-      </div>
+    <%= render "shared/navbar" %>
+    <%= yield %>
+    <%= render "shared/footer" %>
   </div>
   </body>
 </html>
