--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class= "container">
-  <div id= "description">
-    <h2>Check our latest offers</h2>
+  <div class= "row">
+    <h2><strong>Why choose Xplore ?</strong></h2>
   </div>
 </div>
