--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -33,3 +33,11 @@
   background: #3d3d3d;
   color: white;
 }
+
+.row {
+  margin-top: 1rem;
+  padding: 150px 0;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: aquamarine;
+}
