add stuff to home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.moodgoyave.com/wp-content/uploads/2023/07/van-life-liberte.jpg);">
     <div class="container">
-      <h1>Welcome to <strong>Spry® Xplore</strong></h1>
-      <p>Change the way you explore, set off for new adventures!</p>
+      <h1>Binevenue sur <strong>Spry® Xplore</strong></h1>
+      <p>Changez la manière dont vous voyagez, embarquez pour  new adventures!</p>
       <a class="btn btn-flat" href="#">Book now</a>
     </div>
   </div>
