--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,18 @@
 <div class="container">
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://www.moodgoyave.com/wp-content/uploads/2023/07/van-life-liberte.jpg);">
     <div class="container">
-      <h1>Binevenue sur <strong>Spry® Xplore</strong></h1>
-      <p>Changez la manière dont vous voyagez, embarquez pour  new adventures!</p>
-      <a class="btn btn-flat" href="#">Book now</a>
+      <h1>Bienvenue sur <strong>Spry® Xplore</strong></h1>
+      <p>Changez la votre vision du voyage, et partez pour l'aventure !</p>
+      <a class="btn btn-flat" href="#">Reserver</a>
     </div>
   </div>
 </div>
 
 <div class= "container">
   <div class= "row">
-    <h2><strong>Why choose Xplore ?</strong></h2>
+    <h2><strong>Pourquoi choisir Xplore ?</strong></h2>
+    <p>Transformez chaque voyage en une expérience inoubliable !
+    <br>Louez un van aménagé et profitez d’une liberté totale : dormez où bon vous semble, réveillez-vous face à l’océan ou en pleine nature.
+    <br>Bien plus qu’un simple voyage, c’est une véritable évasion ! 🚐✨</p>
   </div>
 </div>
