--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,16 +10,16 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#home">Home</a>
+                <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#vans">Vans</a>
+                <a class="nav-link" href="vans">Vans</a>
               </li>
               <% if user_signed_in? %>
                 <li class="nav-item dropdown">
                   <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="" />
                   <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">My bookings</a>
+                    <a class="dropdown-item" href="#bookings">My bookings</a>
 
                     <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
 
@@ -28,7 +28,7 @@
                 </li>
               <% else %>
                 <li class="nav-item">
-                  <%= link_to "S'inscrire", new_user_registration_path, class: "nav-link" %>
+                  <%= link_to "Se connecter", new_user_registration_path, class: "nav-link" %>
                 </li>
               <% end %>
 
