--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,5 +11,6 @@
 <div class= "container">
   <div id= "description">
     <h2>Check our latest offers</h2>
+    <%= link_to "Add a new van", new_van_path, class: "btn btn-primary mt-3" %>
   </div>
 </div>
