--- a/app/views/vans/new.html.erb
+++ b/app/views/vans/new.html.erb
@@ -1,7 +1,9 @@
+<div class="container">
 <h1>Add your new van</h1>
 
 <%= render "form", van: @van %>
 
 <div>
-  <%= link_to "Back to vans", vans_path %>
+  <%= link_to "Back to vans", vans_path, class: "btn btn-secondary mb-1" %>
+</div>
 </div>
