created the van show

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="vans">Vans</a>
+                <a class="nav-link" href="vans">See all vans</a>
               </li>
               <% if user_signed_in? %>
                 <li class="nav-item dropdown">
