add cards to the homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,4 +15,42 @@
     <br>Louez un van aménagé et profitez d’une liberté totale : dormez où bon vous semble, réveillez-vous face à l’océan ou en pleine nature.
     <br>Bien plus qu’un simple voyage, c’est une véritable évasion ! 🚐✨</p>
   </div>
+
+  <div id= "cards" class="row d-flex justify-content-center vh-100 align-items-center">
+    <div class="card col-4 " style="width: 23rem;">
+      <img src="https://resize.elle.fr/article/var/plain_site/storage/images/deco/news-tendances/voyage-en-van-deco-interieure-location-itineraires-notre-guide/96957443-1-fre-FR/Voyage-en-van-deco-interieure-location-itineraires-notre-guide.jpg" class="card-img-top" alt="van aménagé">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Vans aménagés</strong></h5>
+          <p class="card-text">Profitez d'un confort sans égal dans l'un de nos vans pensés pour vivre sur la route.</p>
+        </div>
+    </div>
+    <div class="card col-4 " style="width: 23rem;">
+      <img src="https://i0.wp.com/www.laplanetedecaro.com/wp-content/uploads/2024/07/Volkswagen-ID-Buzz-vanlife-4.webp?ssl=1" class="card-img-top" alt="van écolo">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Roulez écolo</strong></h5>
+          <p class="card-text">Expérimentez les voyages sans émissions de co2 grâce à nos véhicules hybrides, électrique et hydrogène.</p>
+        </div>
+    </div>
+    <div class="card col-4 " style="width: 23rem;">
+      <img src="https://roadsurfer.com/wp-content/uploads/RS6835_Spanien_Malaga_alvaroandrades_BeachHostelDeluxe_29_05_210112-scr-750x390.jpg" class="card-img-top" alt="van sur fond de mer">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Soyez libres</strong></h5>
+          <p class="card-text">Les vans Xplore vous permettent de partir du jour au lendemain sur les routes du monde sans avoir à prévoir de lieu ou dormir.</p>
+        </div>
+    </div>
+    <div class="card col-4 " style="width: 23rem;">
+      <img src="https://roadsurfer.com/wp-content/uploads/RS6835_Spanien_Malaga_alvaroandrades_BeachHostelDeluxe_29_05_210112-scr-750x390.jpg" class="card-img-top" alt="van sur fond de mer">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Soyez libres</strong></h5>
+          <p class="card-text">Les vans Xplore vous permettent de partir du jour au lendemain sur les routes du monde sans avoir à prévoir de lieu ou dormir.</p>
+        </div>
+    </div>
+    <div class="card col-4 " style="width: 23rem;">
+      <img src="https://roadsurfer.com/wp-content/uploads/RS6835_Spanien_Malaga_alvaroandrades_BeachHostelDeluxe_29_05_210112-scr-750x390.jpg" class="card-img-top" alt="van sur fond de mer">
+        <div class="card-body">
+          <h5 class="card-title"><strong>Soyez libres</strong></h5>
+          <p class="card-text">Les vans Xplore vous permettent de partir du jour au lendemain sur les routes du monde sans avoir à prévoir de lieu ou dormir.</p>
+        </div>
+    </div>
+  </div>
 </div>
