--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -42,3 +42,21 @@
   border-radius: 1rem;
   text-align: center !important;
 }
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  flex-wrap: wrap;
+  border-radius: 20px;
+  box-shadow: 0px 5px 7px 5px #D5D5D5;
+  margin: 30px;
+}
+
+.card-img-top {
+  height: 12rem;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
