--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,23 +1,20 @@
   <div class="d-flex flex-column min-vh-100">
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <%= link_to root_path, class: "navbar-brand" do %>
           <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741013739/Spry_Xplore_2_xtbrkq.png"/>
-        </a>
+        <% end %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="vans">See all vans</a>
-              </li>
               <% if user_signed_in? %>
+                <li class="nav-item">
+                <%= link_to "See all vans", vans_path, class: "nav-link" %>
+                </li>
                 <li class="nav-item dropdown">
-                  <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="" />
+                  <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/sarahlafer"/>
                   <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="#bookings">My bookings</a>
 
@@ -28,7 +25,7 @@
                 </li>
               <% else %>
                 <li class="nav-item">
-                  <%= link_to "Se connecter", new_user_registration_path, class: "nav-link" %>
+                  <%= link_to "Se connecter", user_session_path, class: "nav-link" %>
                 </li>
               <% end %>
 
