--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -46,6 +46,7 @@
 .cards {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 20px;
 }
 
 .card {
@@ -59,4 +60,13 @@
   height: 12rem;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
+}
+
+#description {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.footer {
+  margin-top: 12px;
 }
