--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,11 @@
   </head>
 
   <body>
-    <%= render "shared/flashes" %>
-    <%= render "shared/navbar" %>
-    <%= yield %>
-    <%= render "shared/footer" %>
-  </div>
+    <div class="d-flex flex-column min-vh-100">
+      <%= render "shared/flashes" %>
+      <%= render "shared/navbar" %>
+      <%= yield %>
+      <%= render "shared/footer" %>
+    </div>
   </body>
 </html>
