the cards are finished

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,39 +17,39 @@
   </div>
 
   <div id= "cards" class="row d-flex justify-content-center vh-100 align-items-center">
-    <div class="card col-4 " style="width: 23rem;">
+    <div class="card-home col-4 " style="width: 23rem;">
       <img src="https://resize.elle.fr/article/var/plain_site/storage/images/deco/news-tendances/voyage-en-van-deco-interieure-location-itineraires-notre-guide/96957443-1-fre-FR/Voyage-en-van-deco-interieure-location-itineraires-notre-guide.jpg" class="card-img-top" alt="van aménagé">
         <div class="card-body">
           <h5 class="card-title"><strong>Vans aménagés</strong></h5>
           <p class="card-text">Profitez d'un confort sans égal dans l'un de nos vans pensés pour vivre sur la route.</p>
         </div>
     </div>
-    <div class="card col-4 " style="width: 23rem;">
+    <div class="card-home col-4 " style="width: 23rem;">
       <img src="https://i0.wp.com/www.laplanetedecaro.com/wp-content/uploads/2024/07/Volkswagen-ID-Buzz-vanlife-4.webp?ssl=1" class="card-img-top" alt="van écolo">
         <div class="card-body">
           <h5 class="card-title"><strong>Roulez écolo</strong></h5>
           <p class="card-text">Expérimentez les voyages sans émissions de co2 grâce à nos véhicules hybrides, électrique et hydrogène.</p>
         </div>
     </div>
-    <div class="card col-4 " style="width: 23rem;">
+    <div class="card-home col-4 " style="width: 23rem;">
       <img src="https://roadsurfer.com/wp-content/uploads/RS6835_Spanien_Malaga_alvaroandrades_BeachHostelDeluxe_29_05_210112-scr-750x390.jpg" class="card-img-top" alt="van sur fond de mer">
         <div class="card-body">
           <h5 class="card-title"><strong>Soyez libres</strong></h5>
           <p class="card-text">Les vans Xplore vous permettent de partir du jour au lendemain sur les routes du monde sans avoir à prévoir de lieu ou dormir.</p>
         </div>
     </div>
-    <div class="card col-4 " style="width: 23rem;">
-      <img src="https://roadsurfer.com/wp-content/uploads/RS6835_Spanien_Malaga_alvaroandrades_BeachHostelDeluxe_29_05_210112-scr-750x390.jpg" class="card-img-top" alt="van sur fond de mer">
+    <div class="card-home col-4 " style="width: 23rem;">
+      <img src="https://ims.ev.mu/medium_shutterstock_2304356979_B_f86d75c26f/medium_shutterstock_2304356979_B_f86d75c26f.jpg" class="card-img-top" alt="map">
         <div class="card-body">
-          <h5 class="card-title"><strong>Soyez libres</strong></h5>
-          <p class="card-text">Les vans Xplore vous permettent de partir du jour au lendemain sur les routes du monde sans avoir à prévoir de lieu ou dormir.</p>
+          <h5 class="card-title"><strong>Plus proche</strong></h5>
+          <p class="card-text">Grace à notre carte, trouvez l'offre la plus proche de vous en un rien de temps.</p>
         </div>
     </div>
-    <div class="card col-4 " style="width: 23rem;">
-      <img src="https://roadsurfer.com/wp-content/uploads/RS6835_Spanien_Malaga_alvaroandrades_BeachHostelDeluxe_29_05_210112-scr-750x390.jpg" class="card-img-top" alt="van sur fond de mer">
+    <div class="card-home col-4 " style="width: 23rem;">
+      <img src="https://www.hsc.fr/wp-content/uploads/2024/08/femme-canape-smartphone.webp" class="card-img-top" alt="reservation van">
         <div class="card-body">
-          <h5 class="card-title"><strong>Soyez libres</strong></h5>
-          <p class="card-text">Les vans Xplore vous permettent de partir du jour au lendemain sur les routes du monde sans avoir à prévoir de lieu ou dormir.</p>
+          <h5 class="card-title"><strong>Rapidité et simplicité</strong></h5>
+          <p class="card-text">Réservez en moins de 5 minutes votre van avec notre page de réservation pensée pour vous faciliter la vie.</p>
         </div>
     </div>
   </div>
