--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -11,7 +11,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-      <h1>My bookings<</h1>
+      <h1>My bookings</h1>
       <ul class="list-group mb-3">
         <% @bookings.each do |booking| %>
           <li><%=booking.van.model%></li>
