--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,25 +1,16 @@
-<h1>My bookings</h1>
-
-<ul>
-  <% @bookings.each do |booking| %>
-    <li><%=booking.van.model%></li>
-    <li>Start date: <%=booking.start_date%></li>
-    <li>End date: <%=booking.end_date%></li>
-  <% end %>
-</ul>
-
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+    <div class="col-xs-12 col-sm-10">
       <h1>My bookings</h1>
       <ul class="list-group mb-3">
         <% @bookings.each do |booking| %>
-          <li><%=booking.van.model%></li>
-          <li>Start date: <%=booking.start_date%></li>
-          <li>End date: <%=booking.end_date%></li>
+          <li class="list-group-item">
+            <strong><%= booking.van.model %></strong><br>
+            Start date: <%= booking.start_date %><br>
+            End date: <%= booking.end_date %>
+          </li>
         <% end %>
       </ul>
-      <%# <%= link_to "Add a new van", new_van_path, class: 'btn btn-primary' %>
     </div>
   </div>
 </div>
