--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -3,7 +3,7 @@
 <p>Fuel: <%= @van.fuel %></p>
 <p>Price: <%= @van.price %></p>
 <p><%= @van.surface %></p>
-<%= link_to "reserver ce van", new_booking_path, class: "btn btn-flat" %>
+<%= link_to "reserver ce van",  new_van_booking_path(@van), class: "btn btn-flat" %>
 
 <%= link_to "Back to all vans", vans_path %>
 </div>
