--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,34 @@
   </div>
 
   <div id= "description">
-    <h2><strong>Nos offres les plus récentes</strong></h2>
+    <h2><strong>Nos coups de coeur 💘</strong></h2>
     <%# <%= link_to "Add a new van", new_van_path, class: "btn btn-primary mt-3" %>
   </div>
+
+  <div id= "carroussel container">
+    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://media.volkswagen.fr/wp-content/uploads/2023/08/c6ee0d2e594574a12c5df51319fdb95c-2098x1180.jpg.webp" class="d-block w-100" style="object-position: center;" alt="van vw">
+        </div>
+        <div class="carousel-item">
+          <img src="https://cdn.motor1.com/images/mgl/P3Gkjy/s1/mercedes-benz-eqv-camper-side-angle-top-up.jpg" style="object-position: center;" class="d-block w-100" alt="van mercedes">
+        </div>
+        <div class="carousel-item">
+          <img src="https://www.lemondeducampingcar.fr/wp/wp-content/uploads/2020/12/mybushotel-leon-bus-scolaire-usa.jpg" style="object-position: center;" class="d-block w-100" alt="van chevrolet">
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+
 
 <div class= "container">
   <div class= "row">
