--- a/app/views/vans/_form.html.erb
+++ b/app/views/vans/_form.html.erb
@@ -7,6 +7,7 @@
     <%= f.input :model, placeholder: "Roadsurfer, Volkswagen Crafter..." %>
     <%= f.input :price, label: "Daily price (in €)", placeholder: "Indicate your price per day", input_html: { min: 0 } %>
     <%= f.input :surface, label: "Surface (in m²)", placeholder: "Indicate the surface" %>
+    <%= f.input :photo, as: :file %>
   </div>
 
   <div class="form-actions">
