--- a/app/views/vans/new.html.erb
+++ b/app/views/vans/new.html.erb
@@ -4,6 +4,6 @@
 <%= render "form", van: @van %>
 
 <div>
-  <%= link_to "Back to vans", vans_path, class: "btn btn-secondary mb-1" %>
+  <%= link_to "Tous les vans", vans_path, class: "btn btn-secondary mb-1" %>
 </div>
 </div>
