--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -31,8 +31,8 @@
   color: white;
 }
 .row {
-  margin-top: 1rem;
-  padding: 35px 0;
+  margin-top: 2rem;
+  padding-top: 35px;
   display: flex;
   flex-wrap: wrap;
   border-radius: 1rem;
@@ -81,5 +81,10 @@
   height: 40rem;
   width: 100%;
   border-radius: 20px;
-  object-position: center;
+ }
+
+ .carousel-item-photo {
+    object-fit: cover;
+    height: 640px;
+    object-position: center;
  }
