user dashboard for booked and rented-out vans

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,15 +1,16 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10">
-      <h1>My bookings</h1>
+      <h1>Your booked vans</h1>
       <ul class="list-group mb-3">
-        <% @bookings.each do |booking| %>
-          <li class="list-group-item">
-            <strong><%= booking.van.model %></strong><br>
-            Start date: <%= booking.start_date %><br>
-            End date: <%= booking.end_date %>
-          </li>
-        <% end %>
+        <%= render @bookings_as_visitor %>
+      </ul>
+    </div>
+
+    <div class="col-xs-12 col-sm-10 mt-5">
+      <h1>Your rented-out vans</h1>
+      <ul class="list-group mb-3">
+        <%= render @bookings_as_owner %>
       </ul>
     </div>
   </div>
