added  images to thevans index

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
       <h1>Bienvenue sur <strong>Spry® Xplore</strong></h1>
       <p>Changez la votre vision du voyage, et partez pour l'aventure !</p>
-      <%= link_to "Reserver un van", vans_path, class: "btn btn-flat" %>
+      <%= link_to "Réserver un van", vans_path, class: "btn btn-flat" %>
       <%= link_to "Louer mon van", new_van_path, class: "btn btn-flat" %>
     </div>
   </div>
