--- a/app/views/vans/index.html.erb
+++ b/app/views/vans/index.html.erb
@@ -4,7 +4,11 @@
         <div id= "cards" class="row d-flex justify-content-center align-items-center">
           <% @vans.each do |van| %>
             <div class="card-home col-4 " style="width: 23rem;">
-              <img src="<%=van.image_url%>" class="card-img-top" alt="van aménagé">
+            <% if van.photo.attached? %>
+              <%= cl_image_tag van.photo.key, class: "card-img-top"%>
+            <% else %>
+              <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741106361/vw_hdryrk.webp" class= "card-img-top" alt="van">
+            <% end %>
               <%= link_to van_path(van) do %>
                 <div class="card-body">
                   <h5 class="card-title"><strong> <%= van.model %></strong></h5>
