--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,24 +17,30 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="https://media.volkswagen.fr/wp-content/uploads/2023/08/c6ee0d2e594574a12c5df51319fdb95c-2098x1180.jpg.webp" class="d-block w-100 carousel-item-photo" alt="van vw">
-          <div class="carousel-caption d-none d-md-block" style="background-color:rgba(100, 100, 100, 0.5);">
-            <h5>Van Volkswagen California</h5>
-            <p>Lyon, 69001.</p>
-          </div>
+            <a href="/vans/10">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Volkswagen California Ocean</h5>
+                <p>Lyon, 69001.</p>
+              </div>
+            </a>
         </div>
         <div class="carousel-item">
           <img src="https://cdn.motor1.com/images/mgl/P3Gkjy/s1/mercedes-benz-eqv-camper-side-angle-top-up.jpg" class="d-block w-100 carousel-item-photo" alt="van mercedes">
-          <div class="carousel-caption d-none d-md-block" style="background-color:rgba(100, 100, 100, 0.5);">
-            <h5>van Mercedes Sprinter CamperVan</h5>
-            <p>Marseille, 13008.</p>
-          </div>
+            <a href="/vans/11">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Renault Partner</h5>
+                <p>Marseille, 13008.</p>
+              </div>
+            </a>
         </div>
         <div class="carousel-item">
           <img src="https://www.lemondeducampingcar.fr/wp/wp-content/uploads/2020/12/mybushotel-leon-bus-scolaire-usa.jpg" class="d-block w-100 carousel-item-photo" alt="van chevrolet">
-          <div class="carousel-caption d-none d-md-block" style="background-color:rgba(100, 100, 100, 0.5);">
-            <h5>Van Chevrolet 350</h5>
-            <p>Paris, 75019.</p>
-          </div>
+            <a href="/vans/12">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Ford Transit</h5>
+                <p>Paris, 75019.</p>
+              </div>
+            </a>
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
