--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,15 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.btn-flat {
+  border-radius: 12px;
+  display: block;
+  margin : auto;
+  margin-bottom : 16px;
+}
+
+#map {
+  width: 100%;
+  height: 500px;
+}
+
