--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
 <h2><%= @van.model%></h2>
-<p>Fuel: <%= @van.fuel %></p>
-<p>Price: <%= @van.price %></p>
-<p><%= @van.surface %></p>
+<p>Type : <%= @van.fuel %></p>
+<p>Prix : <%= @van.price %>€</p>
+<p>Surface : <%= @van.surface %>m²</p>
 
 <%= link_to "Réserver ce van",  new_van_booking_path(@van), class: "btn btn-flat" %>
 
