--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,5 @@
 // Your CSS partials
 @import "components/index";
 @import "components/footer";
+@import "pages/van_show";
 @import "pages/index";
