--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -1,15 +1,25 @@
+
 <div class="container">
-<h2><%= @van.model%></h2>
-<% if @van.photo.attached? %>
-  <%= cl_image_tag @van.photo.key, width: 400, height: 300, crop: :fill%>
-<% else %>
-  <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741106361/vw_hdryrk.webp" width="auto" height="auto">
-<% end %>
-<p>Fuel: <%= @van.fuel %></p>
-<p>Price: <%= @van.price %></p>
-<p><%= @van.surface %></p>
+  <div class="van-container">
+    <% if @van.photo.attached? %>
+      <%= cl_image_tag @van.photo.key, class: "van-img"%>
+    <% else %>
+      <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741106361/vw_hdryrk.webp" width="auto" height="auto" class="van-img">
+    <% end %>
+    <h2><%= @van.model%></h2>
+    <div class="details-card">
+      <p>Fuel: <%= @van.fuel %></p>
+      <p>Price: <%= @van.price %>€ per day</p>
+      <% if @van.surface? %>
+        <p>Surface: <%= @van.surface %>㎡</p>
+      <% end %>
+    </div>
 
-<%= link_to "Réserver ce van",  new_van_booking_path(@van), class: "btn btn-flat" %>
-
-<%= link_to "Tous les vans", vans_path %>
+    <div>
+      <%= link_to "Réserver ce van", new_van_booking_path(@van), class: "btn btn-flat" %>
+    </div>
+  </div>
+  <div>
+    <%= link_to "Retour", vans_path, class: "btn btn-secondary" %>
+  </div>
 </div>
