--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,7 +1,7 @@
 // Import page-specific CSS files here.
 @import "home";
 
-.btn-flat {
+.btn-map {
   border-radius: 12px;
   display: block;
   margin : auto;
@@ -12,4 +12,3 @@
   width: 100%;
   height: 500px;
 }
-
