--- a/app/views/vans/index.html.erb
+++ b/app/views/vans/index.html.erb
@@ -21,11 +21,13 @@
   </div>
 
   <div data-controller="toggle" class="mt-5 map-container">
-  <button class="btn btn-flat" data-action="click->toggle#fire"><span>Voir la carte</span></button>
-      <div style="height: 600px" id="map-container" data-toggle-target="togglableElement"class="d-none"
-          data-controller="map"
-          data-map-markers-value="<%= @markers.to_json %>"
-          data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-        </div>
+  <button class="btn btn-flat btn-map" data-action="click->toggle#fire"><span>Voir la carte</span>
+  <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741184289/icons8-carte-30_sx5vze.png" alt="icon-map">
+  </button>
+
+    <div style="height: 600px" id="map-container" data-toggle-target="togglableElement"class="d-none"
+      data-controller="map"
+      data-map-markers-value="<%= @markers.to_json %>"
+      data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
   </div>
-</div>
