--- a/app/views/vans/index.html.erb
+++ b/app/views/vans/index.html.erb
@@ -6,7 +6,9 @@
             <div class="card-home col-4 " style="width: 23rem;">
             <% if van.photo.attached? %>
               <%= cl_image_tag van.photo.key, class: "card-img-top"%>
-            <% else %>
+            <% elsif van.image_url.present?%>
+              <img src="<%= van.image_url %>" class="card-img-top" alt="van">
+            <% else%>
               <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741106361/vw_hdryrk.webp" class= "card-img-top" alt="van">
             <% end %>
               <%= link_to van_path(van) do %>
