--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10">
-      <h1>Your booked vans</h1>
+      <h1>Vos réservations de vans</h1>
       <ul class="list-group mb-3">
         <%= render @bookings_as_visitor %>
       </ul>
     </div>
 
     <div class="col-xs-12 col-sm-10 mt-5">
-      <h1>Your rented-out vans</h1>
+      <h1>Vos vans loués</h1>
       <ul class="list-group mb-3">
         <%= render @bookings_as_owner %>
       </ul>
