--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,5 +1,5 @@
  <li class="list-group-item">
   <strong><%= booking.van.model %></strong><br>
-  Start date: <%= booking.start_date %><br>
-  End date: <%= booking.end_date %>
+  Date de début : <%= booking.start_date %><br>
+  Date de fin : <%= booking.end_date %>
 </li>
