--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -5,7 +5,7 @@
     <% elsif @van.image_url.present?%>
       <img src="<%= @van.image_url %>" class="van-img" alt="van">
     <% else %>
-      <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741106361/vw_hdryrk.webp" width="auto" height="auto" class="van-img">
+      <img src="https://res.cloudinary.com/dhyuv86iu/image/upload/v1741188996/jikun-li-Xeg4GZFc1IQ-unsplash_cgoixa.jpg" width="auto" height="auto" class="van-img">
     <% end %>
     <h2><%= @van.model%></h2>
     <div class="details-card">
