--- a/app/views/vans/index.html.erb
+++ b/app/views/vans/index.html.erb
@@ -5,11 +5,11 @@
           <% @vans.each do |van| %>
             <div class="card-home col-4 " style="width: 23rem;">
             <% if van.photo.attached? %>
-              <%= cl_image_tag van.photo.key, class: "card-img-top"%>
+              <%= cl_image_tag van.photo.key, class: "card-img"%>
             <% elsif van.image_url.present?%>
-              <img src="<%= van.image_url %>" class="card-img-top" alt="van">
+              <img src="<%= van.image_url %>" class="card-img" alt="van">
             <% else%>
-              <img src="https://res.cloudinary.com/dhyuv86iu/image/upload/v1741188996/jikun-li-Xeg4GZFc1IQ-unsplash_cgoixa.jpg" class= "card-img-top" alt="van">
+              <img src="https://res.cloudinary.com/dhyuv86iu/image/upload/v1741188996/jikun-li-Xeg4GZFc1IQ-unsplash_cgoixa.jpg" class= "card-img" alt="van">
             <% end %>
               <%= link_to van_path(van) do %>
                 <div class="card-body">
