--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,15 +10,12 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto">
               <% if user_signed_in? %>
-                <li class="nav-item">
-                <%= link_to "See all vans", vans_path, class: "nav-link" %>
-                </li>
                 <li class="nav-item dropdown">
                   <img class="avatar dropdown-toggle" id="navbarDropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/sarahlafer"/>
                   <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <%= link_to "My bookings", bookings_path, class: "dropdown-item" %>
+                    <%= link_to "Mes réservations", bookings_path, class: "dropdown-item" %>
 
-                    <%= link_to "Log out", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
+                    <%= link_to "Se déconnecter", destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
 
                    <%# <%= button_to  "Log out", destroy_user_session_path, method: :delete %>
                   </div>
