--- a/app/views/vans/index.html.erb
+++ b/app/views/vans/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-      <h1>Tous les vans</h1>
+      <h1>Trouvez le van de vos rêves</h1>
         <div id= "cards" class="row d-flex justify-content-center align-items-center">
           <% @vans.each do |van| %>
             <div class="card-home col-4 " style="width: 23rem;">
