Fix de la taille du logo dans la navbar et traduction du formulaire de création de van en français

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,7 +2,7 @@
     <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
       <div class="container-fluid">
         <%= link_to root_path, class: "navbar-brand" do %>
-          <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741013739/Spry_Xplore_2_xtbrkq.png"/>
+          <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741013739/Spry_Xplore_2_xtbrkq.png" height="40px"/>
         <% end %>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
