--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -23,7 +23,8 @@ controller: 'flatpickr'
     } %>
   </div>
 
-  <div class="form-actions">
+  <div class="form-actions d-flex form-actions justify-content-start" style="margin-top: 80px">
     <%= f.button :submit, "Reserver ce van", class: "btn btn-flat mb-1"%>
-  </div>
+  
 <% end %>
+</div>
