--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -34,3 +34,9 @@ h1 {
   text-decoration: none;
   color: rgb(98, 92, 92);
 }
+.resize{
+  width: 516px; 
+  height: 290.25px;
+  object-fit: cover;
+  object-position: center;
+}
