--- a/app/views/bookings/_booking.html.erb
+++ b/app/views/bookings/_booking.html.erb
@@ -1,5 +1,11 @@
  <li class="list-group-item">
   <strong><%= booking.van.model %></strong><br>
   Date de début : <%= booking.start_date %><br>
-  Date de fin : <%= booking.end_date %>
+  Date de fin : <%= booking.end_date %><br>
+  <%= booking.status %>
+
+  <% if booking.status == 'En attente' && booking_type == "owner" %>
+      <%= button_to 'Accepter', accept_booking_path(booking), method: :patch, class: 'btn btn-flat m-2' %>
+      <%= button_to 'Refuser', reject_booking_path(booking), method: :patch, class: 'btn btn-flat m-2' %>
 </li>
+  <% end %>
