--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,5 +12,6 @@
 // Your CSS partials
 @import "components/index";
 @import "components/footer";
+@import "components/card_dashboard";
 @import "pages/van_show";
 @import "pages/index";
