--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -9,7 +9,7 @@
         <% else %>
           <img src="https://res.cloudinary.com/dexzpdaju/image/upload/v1741106361/vw_hdryrk.webp" class="van-img img-fluid rounded resize">
         <% end %>
-          <p><strong>carburant:</strong> <%= @van.fuel %></p>
+          <p><strong>Carburant:</strong> <%= @van.fuel %></p>
           <p><strong>Prix:</strong> <%= @van.price %>€ par jour</p>
           <% if @van.surface? %>
             <p><strong>Superficie:</strong> <%= @van.surface %>㎡</p>
