--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -7,7 +7,7 @@ controller: 'flatpickr'
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-   <%= f.input :start_date, label: "Date de debut",
+   <%= f.input :start_date, label: "Date de début",
       as: :string,
       input_html: {
       data: {
