--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -8,6 +8,7 @@ controller: 'flatpickr'
 
   <div class="form-inputs">
    <%= f.input :start_date, label: "Date de début",
+      required: true,
       as: :string,
       input_html: {
       data: {
@@ -15,6 +16,7 @@ controller: 'flatpickr'
       }
     } %>
     <%= f.input :end_date, label: "Date de fin",
+      required: true,
       as: :string,
       input_html: {
       data: {
